# fastspa

./: .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.html  opensearch.xml  pyproject.toml  search.html  sidebars.js  sitemap.xml
assets/css/: styles.93d81441.css
assets/js/: 0058b4c6.6cdce6fe.js  08c81567.d7bc67da.js  0c2ed8f0.c6b8fe3b.js  0d43b6b5.24e67c1f.js  0e384e19.23a403ea.js  12d1fbc1.cde038fc.js  142860be.5eebc404.js  17896441.f4b0f7aa.js  1a4e3797.3636349e.js  1bbe46c8.1656ded7.js  283.0753d7e4.js  398.5ee9d351.js  3b8c55ea.3633d2e5.js  3e8da673.3fccb0d7.js  3f4c9a30.157f0533.js  45ae8b4e.1c131e2b.js  48389630.55da70d7.js  533f8947.8a5414a0.js  5e95c892.e0014b3b.js  6ef48d90.1ccd7678.js  72e14192.3c3c05ad.js  850.13f477c3.js  8654d01f.5e4ce6a5.js  875c28ec.b3b178c7.js  984.c178e1c9.js  a6df8031.04ecc7c1.js  a7456010.aac39ecb.js  a7bd4aaa.4cb5dd55.js  a8a3bb3b.a87518ea.js  a94703ab.59ae7624.js  aba21aa0.83a029e1.js  c141421f.9722d19b.js  c49fe682.a561e140.js  c4f5d8e4.58747f12.js  c68063ce.e5b78f13.js  cc66fcb0.17ec40fc.js  cc7558ea.3b5d2220.js  main.26e42ff8.js  main.5487eb79.js  runtime~main.3de5a1d5.js
docs/: docusaurus.config.js  installation.html  intro.html  intro.md  package.json  pnpm-lock.yaml  quick-start.html  quick-start.md  user-stories.html
docs/api/: data-classes.html  factory-functions.html  ipf.html  ipf.md  spa-class.html  spa-class.md
docs/concepts/: _category_.json  analysis-modes.html  analysis-modes.md  (+2 more)
examples/: Thresholds_template.csv  Thresholds_template_perc.csv  examples.py  ipf_examples.py  ipf_spa_integration.py  visualization_example.py
fastspa/: __init__.py  concordance.py  ipf.py  visualization.py
site/: index.html  search-index.json
tests/: README.md  conftest.py  test_basic_spa.py  test_concordance.py  test_consequential_mode.py  test_factory_functions.py  test_integration_advanced_features.py  test_ipf.py  test_loop_detection.py  test_multi_satellite.py  test_network_metrics.py  test_path_collection.py  test_semantic_aggregation.py  test_spa_methods.py  test_temporal_analysis.py  test_uncertainty.py  test_visualization.py
(+38 files in other folders)
