[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastspa"
version = "1.1.0"
description = "Modern Structural Path Analysis for EEIO"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SPA Contributors" }
]
keywords = [
    "structural path analysis",
    "input-output",
    "EEIO",
    "LCA",
    "supply chain",
    "environmental",
    "emissions",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "ipfn>=2.1.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
scipy = ["scipy>=1.7"]
viz = ["matplotlib>=3.4"]
plotly = ["plotly>=5.0"]
all = [
    "pandas>=1.3",
    "scipy>=1.7", 
    "matplotlib>=3.4",
    "plotly>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/fastspa/fastspa"
Documentation = "https://fastspa.readthedocs.io"
Repository = "https://github.com/fastspa/fastspa"
Changelog = "https://github.com/fastspa/fastspa/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["fastspa"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501", "UP007", "UP045"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest", "pytest.*", "_pytest", "_pytest.*"]
follow_imports = "skip"
ignore_errors = true
